update to JWT auth
